# mldevops_exercise

./: .pre-commit-config.yaml  AML_lab_1&2_task_2.ipynb  model.py  pyproject.toml
