[tool.poetry]
name = "task-3"
version = "0.1.0"
description = "I dont know"
authors = ["tycjantyc <jantych3h3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
torch = "^2.5.1"
torchvision = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
